--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -6,8 +6,12 @@
     max-width: 740px
   .navbar-top
     &__search
-      width: 340px
+      // width: 340px
       margin: auto
+  .search
+    &__input
+      width: 340px
+
   .navbar-menu
     font-size: 14px
 @media ( max-width: 768px )
@@ -21,6 +25,8 @@
     padding: 30px 0
     &__search
       margin: 0
+  .search
+    &__input
       width: 300px
   .navbar-menu
     padding: 22px 0 23px 0
@@ -38,6 +44,7 @@
 
   .menu
     &-btn
+      padding: 0
       width: 16px
       height: 11px
       display: flex
